Completed main API methods
