# market/openapi-schema.yml
@@ -107,7 +107,61 @@ paths:
       responses:
         '204':
           description: ''
-  /api/v1/app/shops/get/:
+  /api/v1/app/basket:
+    get:
+      operationId: listOrders
+      description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043E\u0434\
+        \u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043A\u043E\u0440\u0437\u0438\u043D\
+        \u044B\n\n\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043E\u0434\
+        \u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043A\u043E\u0440\u0437\u0438\u043D\
+        \u044B"
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items: {}
+          description: ''
+    post:
+      operationId: CreateOrder
+      description: "\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0442\u043E\u0432\
+        \u0430\u0440\u044B \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443\n\n\u0414\
+        \u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u044B\
+        \ \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443"
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: ''
+    put:
+      operationId: UpdateOrder
+      description: "\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\
+        \u0442\u044C \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435\
+        \ \u043A\u043E\u0440\u0437\u0438\u043D\u044B\n\n\u0420\u0435\u0434\u0430\u043A\
+        \u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0434\u0435\u0440\
+        \u0436\u0438\u043C\u043E\u0435 \u043A\u043E\u0440\u0437\u0438\u043D\u044B"
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: ''
+    delete:
+      operationId: DestroyOrder
+      description: "\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0442\u043E\u0432\u0430\
+        \u0440\u044B \u0438\u0437 \u043A\u043E\u0440\u0437\u0438\u043D\u044B\n\n\u0423\
+        \u0434\u0430\u043B\u0438\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u044B\
+        \ \u0438\u0437 \u043A\u043E\u0440\u0437\u0438\u043D\u044B"
+      parameters: []
+      responses:
+        '204':
+          description: ''
+  /api/v1/app/shops/get:
     get:
       operationId: listShops
       description: "\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430 \u0441\u043F\
@@ -313,11 +367,62 @@ paths:
                   required:
                   - name
           description: ''
+  /api/v1/app/category:
+    get:
+      operationId: listCategorys
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: integer
+                      readOnly: true
+                    name:
+                      type: string
+                      maxLength: 40
+                    shops:
+                      type: array
+                      items:
+                        type: integer
+                  required:
+                  - name
+          description: ''
+  /api/v1/app/orders:
+    get:
+      operationId: listOrders
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items: {}
+          description: ''
+    post:
+      operationId: CreateOrders
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: ''
   /api/v1/app/user/register:
     post:
       operationId: CreateUserRegister
       description: "\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F\
-        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F"
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        \n\n\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u043F\
+        \u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F"
       parameters: []
       responses:
         '200':
@@ -330,13 +435,99 @@ paths:
       operationId: CreateUserConfirm
       description: "\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\
         \u0438\u0435 email \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\
-        \u043B\u044F"
+        \u043B\u044F\n\n\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\
+        \u043D\u0438\u0435 email \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\
+        \u0435\u043B\u044F"
       parameters: []
       responses:
         '200':
           content:
             application/json:
               schema: {}
+          description: ''
+  /api/v1/app/user/login:
+    post:
+      operationId: CreateUserLogin
+      description: "\u0412\u0445\u043E\u0434 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\
+        \u0430\u0442\u0435\u043B\u044F\n\n\u0412\u0445\u043E\u0434 \u043F\u043E\u043B\
+        \u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F"
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: ''
+  /api/v1/app/user/password_reset:
+    post:
+      operationId: CreateEmail
+      description: 'An Api View which provides a method to request a password reset
+        token based on an e-mail address
+
+
+        Sends a signal reset_password_token_created when a reset token was created'
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema: &id001
+              properties:
+                email:
+                  type: string
+                  format: email
+              required:
+              - email
+          application/x-www-form-urlencoded:
+            schema: *id001
+          multipart/form-data:
+            schema: *id001
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                properties:
+                  email:
+                    type: string
+                    format: email
+                required:
+                - email
+          description: ''
+  /api/v1/app/user/password_reset/confirm:
+    post:
+      operationId: CreatePasswordToken
+      description: An Api View which provides a method to reset a password based on
+        a unique token
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema: &id002
+              properties:
+                password:
+                  type: string
+                token:
+                  type: string
+              required:
+              - password
+              - token
+          application/x-www-form-urlencoded:
+            schema: *id002
+          multipart/form-data:
+            schema: *id002
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                properties:
+                  password:
+                    type: string
+                  token:
+                    type: string
+                required:
+                - password
+                - token
           description: ''
   /api/v1/app/products/load/:
     post:
